# webgpu-renderer

./: .gitignore  CMakeLists.txt  README.md  context.cpp  context.h  entity.cpp  entity.h  implementations.cpp  main.cpp  memory.cpp  memory.h  runner.cpp  runner.h  shaders.h  shapes.cpp  shapes.h
examples/: basic.cpp  example.h  obj.cpp
